changed next steps, made location points.py, tested, all current code works within a local server
